--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseurl: '' # Website URL
+title: The Unconscious Statistician # Website name
+baseurl: 'https://www.theunconsciousstatistician.com' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
