--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -92,7 +92,7 @@ comments:
     publication: true
     event: true
   disqus:
-    shortname: ''
+    shortname: 'gisilvs'
     show_count: true
   commento:
     url: ''
