--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Posts
-    url: 'posts'
+    url: 'post'
     weight: 20
   - name: Publications
     url: '#featured'
