--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: 'post'
     weight: 20
   - name: Publications
-    url: '#featured'
+    url: 'publication'
     weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
