--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,12 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: Blog
     url: 'post'
     weight: 20
-  - name: Publications
-    url: 'publication'
-    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
