--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -84,7 +84,7 @@ breadcrumb:
   page_types:
     book: true
 comments:
-  provider: ''
+  provider: 'disqus'
   commentable:
     post: true
     book: true
